
  * Concurrent processes don't mix up writes in config files (interim
    fix for lp).  (Vincent Ladeuil, #525571)

  * Cope with various getaddrinfo errors. (Jelmer Vernooij, #609497)

  * Fix annotate after bzrlib changes. (Jelmer Vernooij, #609520)

  * Support _override_hook_source_branch argument to InterBranch.push(). 
    (Jelmer Vernooij, #609178)

 FEATURES

  * Support fetching a limited number of revisions. (Michael Hudson)

  * Support 'bzr diff --format=svn'. (Jelmer Vernooij, #555994)

  * Warn about broken server when accessing codeplex. (Jelmer Vernooij)

  * Use standard iterator for RemoteAccess log browsing, if 
    provided by subvertpy. (Jelmer Vernooij)

  * Filter out ghost revisions in SvnRepository.gather_stats().
    (Jelmer Vernooij, #610219)

 COMPATIBILITY

  * Drop support for Bazaar < 2.2. (Jelmer Vernooij)

 CHANGES

  * "bzr svn-import --incremental" is now the default. 
    "bzr svn-import --restore" provides the previous behaviour and will 
	restore any branches that have been removed but have not been changed 
    since the last import.  (Jelmer Vernooij, #395266)

bzr-svn 1.0.2					  2010-01-22

 BUG FIXES

  * Cope with Google code Subversion repositories a bit better in the 
    layout detection code. (Jelmer Vernooij)
  
  * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)

  * Cope with non-ascii URLs.
   * During connect. (#456548, Jelmer Vernooij)
   * During repository creation. (#458008, Jelmer Vernooij)

  * Cope with non-ascii characters in svn author names. (#460392, 
    Jelmer Vernooij)

  * Fix expected URL in Repository.__repr__ tests that sometimes causes 
    troubles if the temporary directory contains special characters. 
	(John Szakmeister, #460899)

  * Cope with pushing new non-mainline revisions.  (Jelmer Vernooij, #416328)

  * Support probing for Subversion repositories over existing HTTP transports
    using pycurl. (Jelmer Vernooij, #424626)
